--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     ],
     "require": {
         "php": "^7.2|^8.0",
-        "guzzlehttp/guzzle": "~7.0",
+        "guzzlehttp/guzzle": "^6.5|~7.0",
         "spatie/array-to-xml": "^2",
         "league/csv": "^9.0"
     },
